Inital commit of impfbot 4 saxony germany
Inital commit of the bot to semi automate the search for a vaccination appointment in saxony

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+#config file which contains credentials
+config.py
+
+#python environment
+/impfung-env
